# z3-solver-stubs

./: .gitignore  Makefile  README.md  pyproject.toml
src/z3-stubs/: __init__.pyi
stubs/: z3.pyi
z3-stubs/: __init__.pyi
