[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "z3-solver-stubs"
description = "Python type stubs for z3-solver package"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "BSD 3-Clause License" }
dependencies = [
    "z3-solver==4.12.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
    "mypy==1.1.1",
    "black==23.1.0",
]

[tool.setuptools.packages.find]
include = ["z3_solver_stubs*"]

[tool.setuptools.dynamic]
version = { attr = "z3_solver_stubs.__version__" }

[tool.mypy]
mypy_path = "stubs"
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_subclassing_any = false

[tool.black]
extend-exclude = "/(.venv)/"


