[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "z3-solver-stubs"
description = "Python type stubs for z3-solver package"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD 3-Clause License" }
dependencies = [
    "z3-solver==4.13.3.0",
]
version = "4.13.3.0-10"

[project.optional-dependencies]
dev = [
    "mypy==1.1.1",
    "black==23.1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}


[tool.setuptools.package-data]
"*" = ["*.pyi"]


[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_subclassing_any = false

[tool.black]
extend-exclude = "/(.venv)/"


